# rust_ani_parser

./: Cargo.toml
src/: main.rs
src/models/: dub.rs  episode.rs  mod.rs  releases.rs
src/parsers/: anixart_parser.rs  mod.rs
src/repo/: dub_repo.rs  episode_repo.rs  mod.rs  releases_repo.rs
