[package]
name = "rust_parcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "^0.6.2", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json", "macros","bigdecimal"] }
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }